cmake_minimum_required(VERSION 3.28)
project(Knapsack_problem)

set(CMAKE_CXX_STANDARD 17)

add_executable(Knapsack_problem main.cpp
        Item.h
        Item.cpp
        BruteForce.h
        BruteForce.cpp
        Algorithm.h
        Algorithm.cpp
        Algorithm.h
        Diamond.h
        Diamond.cpp
        Pelt.h
        Pelt.cpp
        Tusk.h
        Tusk.cpp
        Bone.h
        Bone.cpp
        Scales.h
        Scales.cpp
        Skull.h
        Skull.cpp
        Claw.h
        Claw.cpp
        Bowl.h
        Bowl.cpp
        Cup.h
        Cup.h
        Ruby.h
        Ruby.cpp
        Cup.cpp
)
